--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,45 +4,33 @@ on:
   push:
     branches:
       - main
-      - feature/dev
+      - release/dev
   pull_request:
     branches:
       - main
-      - feature/dev
+      - release/dev
 
 jobs:
-  build-and-test:
-    name: Build and Test
+  build-and-deploy:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
+    environment: ${{ github.ref_name == 'main' && 'production' || 'development' }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          node-version: 18.x
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Set environment type
-        run: echo "ENV_TYPE=${{ github.ref_name == 'main' && 'production' || 'development' }}" >> $GITHUB_ENV
-
       - name: Run tests
         run: npm run test
 
-      - name: Build TypeScript
+      - name: Build
         run: npm run build
 
-      - name: Verify build output
-        run: ls -la dist
-
       - name: Show environment
-        run: echo "Running in $ENV_TYPE mode"
+        run: echo "Deploying to ${{ github.environment }}"
